Fix the qty-adjustment buttons on the cart as well as footer being cut off when drawer is pulled down

--- a/source/styles/02 timber/19 - Site Header.scss
+++ b/source/styles/02 timber/19 - Site Header.scss
@@ -4,7 +4,8 @@
 .site-header {
   background: $colorBody;
   > .wrapper {
-    padding: ($gutter / 2) 0;
+    padding-top: ($gutter / 2);
+    padding-bottom: ($gutter / 2);
   }
 
   .grid--table {
