--- a/source/styles/02 timber/22 - Drawers.scss
+++ b/source/styles/02 timber/22 - Drawers.scss
@@ -9,9 +9,15 @@
 }
 
 .js-drawer-open {
+  .site-footer {
+    padding-bottom: ($drawerNavWidth + ($gutter * 2));
+  }
   @media (max-width: $screen-xs-max){
     overflow: hidden;
     /* Should only be 'visible' for mobile, if that's the direction we take it in */
+    .site-footer {
+      padding-bottom: 0px;
+    }
   }
 }
 
@@ -80,14 +86,17 @@
 }
 
 @media (max-width: $screen-xs-max){
-  .site-header {
+  .site-header,
+  .site-footer {
     transition: $drawerTransition;
   }
-  .js-drawer-open-right .site-header {
-    @include transform(translateX(-$drawerCartWidth));
-  }
-  .js-drawer-open-left .site-header {
+  .js-drawer-open-left .site-header,
+  .js-drawer-open-left .site-footer {
     @include transform(translateX($drawerCartWidth));
+  }
+  .js-drawer-open-right .site-header,
+  .js-drawer-open-right .site-footer {
+    @include transform(translateX(-$drawerCartWidth));
   }
 }
 
